# Andrea-Bendo-repository-

source/wft/: __init__.py  data.py  metrics.py  plot_variables.py  test_features.py  train_evaluation.py  train_model.py  walkforward.py
walkforward-tail-regression/: .gitignore  EXAMPLE_1.ipynb  EXAMPLE_2.ipynb  EXAMPLE_3.ipynb  EXAMPLE_4.ipynb  Logic-Outline  Mini_case_study.ipynb  NN_vs_OLS.ipynb  README  pyproject.toml
walkforward-tail-regression/source/wft/: eval_performance.py  feature_selection.py  hyperparams_cv.py  models.py
walkforward-tail-regression/wft/: __init__.py  data.py  eval_performance_oos.py  feature_selection.py  hyperparams_cv.py  metrics.py  models.py  optim_threshold.py  plot_variables.py  position_sizer.py  preprocessing.py  summary_features.py  train_evaluation.py  train_model.py  walkforward.py  wf_stats.py
